// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/post_view/PostAttachment > should match snapshot 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <p>
          post message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment > should match snapshot, on Show Less 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <p>
          post message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment > should match snapshot, on Show More 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <p>
          post message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment > should match snapshot, on deleted post 1`] = `
<div>
  <p>
    (message deleted)
  </p>
</div>
`;

exports[`components/post_view/PostAttachment > should match snapshot, on edited post 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <p>
          post message
           
          <span
            class="post-edited__indicator"
            data-edited-at="1"
            data-post-id="post_id"
            id="postEdited_post_id"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              />
            </svg>
            Edited
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachment > should match snapshot, on ephemeral post 1`] = `
<div>
  <div
    class="post-message post-message--collapsed"
  >
    <div
      class="post-message__text-container"
      style="max-height: 600px;"
    >
      <div
        class="post-message__text"
        dir="auto"
        id="postMessageText_post_id"
      >
        <p>
          post message
        </p>
      </div>
    </div>
  </div>
</div>
`;
